<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <uk.co.markormesher.android_fab.FloatingActionButton
        android:id="@+id/main_action_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:buttonBackgroundColour="?android:colorAccent"
        app:buttonIcon="@drawable/ic_baseline_add_24"
        app:internalOffsetBottom="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
